--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
 <meta name="twitter:description" content="Get 200 PIXEL now!">
 <meta name="twitter:image" >
 <meta name="twitter:card" content="summary_large_image">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XSLN8SZLP7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XSLN8SZLP7');
+</script>
+
 
 
 <style>
@@ -39,7 +49,7 @@ new google.translate.TranslateElement({pageLanguage: 'en', layout: google.transl
 <main class="main">
 <header class="navbar navbar-sticky sticky-bg-color--dark navbar-expand-lg navbar-dark">
 <div class="container-fluid position-relative">
-<img src="pixels.png" style=" width: 192px; " >
+<img src="https://pixel-drop.in/pixels.png" style=" width: 192px; " >
 <button class="navbar-toggler d-lg-none" type="button" data-toggle="navbarToggler" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
 </button>
@@ -179,7 +189,7 @@ Give life to your land by managing crops and raising animals. Get energy from yo
 </div>
 <div class="col-12 col-lg-5 col-xl-6 mb-6 mb-lg-0 text-center">
 <picture class="about__image reveal w-75">
-<img src="GFyCdPxaEAAroj6.png" alt="illustration" class="img-fluid w-100">
+<img src="https://pixel-drop.in/GFyCdPxaEAAroj6.png" alt="illustration" class="img-fluid w-100">
 </picture>
 </div>
 </div>
@@ -679,7 +689,7 @@ Roadmap update
 <section id="app" class="space section--dark bg-color--dark--2 border--bottom switchable d-lg-flex align-items-md-center">
 <div class="col-12 col-lg-6 mb-40 mb-lg-0 text-center mb-3 reveal">
 <picture class="switchable__image">
-<img src="GFyCdPxaEAAroj6.png" alt="image" class="img-fluid">
+<img src="https://pixel-drop.in/GFyCdPxaEAAroj6.png" alt="image" class="img-fluid">
 </picture>
 </div>
 <div class="switchable__content">
